logs/watchdog_20251011_1415.log
[11/10/2025 14:15:02,52] START WATCHDOG 
  File "C:\AUTOMAZIONE\odin_watchdog_mt5.py", line 192
    elif step >= 3:
    ^^^^
SyntaxError: invalid syntax
[11/10/2025 14:15:02,85] END WATCHDOG 
